@@ -611,6 +611,10 @@ function createDatabaseTables($dbh, $charset, $collation, $dbtype, $schema, $tab
     $result = db_query_install($query, $dbh);
     $query = "ALTER TABLE svn_access_rights ALTER COLUMN id SET DEFAULT nextval('svn_access_rights_id_seq'::regclass);";
     $result = db_query_install($query, $dbh);
+    $query = "ALTER TABLE svn_access_rights ALTER COLUMN user_id SET DEFAULT 0;";
+    $result = db_query_install($query, $dbh);
+    $query = "ALTER TABLE svn_access_rights ALTER COLUMN group_id SET DEFAULT 0;";
+    $result = db_query_install($query, $dbh);
     $query = "ALTER TABLE ONLY svn_access_rights ADD CONSTRAINT svn_access_rights_pkey PRIMARY KEY (id);";
     $result = db_query_install($query, $dbh);
     $query = "CREATE INDEX svn_access_rights_deleted_idx ON svn_access_rights USING btree (deleted);";
@@ -1078,7 +1082,7 @@ function createOracleDatabaseTables($dbh, $tDatabaseCharset, $tDatabaseCollation
     $query = "ALTER TRIGGER $schema.\"SVNUSERS_TRG\" ENABLE";
     $result = db_query_install($query, $dbh);
     
-    $query = "CREATE TABLE $schema.\"SVN_ACCESS_RIGHTS\" (\"ID\"         NUMBER(*,0) NOT NULL ENABLE, \"PROJECT_ID\" NUMBER(*,0), \"USER_ID\"    NUMBER(*,0), \"GROUP_ID\"   NUMBER(*,0), \"PATH\" VARCHAR2(4000) NOT NULL ENABLE, \"VALID_FROM\"    VARCHAR2(14 BYTE) DEFAULT '00000000000000' NOT NULL ENABLE, \"VALID_UNTIL\"   VARCHAR2(14 BYTE) DEFAULT '99999999999999' NOT NULL ENABLE, \"ACCESS_RIGHT\"  VARCHAR2(255 BYTE) DEFAULT 'none' NOT NULL ENABLE, \"RECURSIVE\"     VARCHAR2(255 BYTE) DEFAULT 'yes' NOT NULL ENABLE, \"CREATED\"       VARCHAR2(14 BYTE) DEFAULT '00000000000000' NOT NULL ENABLE, \"CREATED_USER\"  VARCHAR2(255 BYTE) DEFAULT '', \"MODIFIED\"      VARCHAR2(14 BYTE) DEFAULT '00000000000000' NOT NULL ENABLE, \"MODIFIED_USER\" VARCHAR2(255 BYTE) DEFAULT '', \"DELETED\"       VARCHAR2(14 BYTE) DEFAULT '00000000000000' NOT NULL ENABLE, \"DELETED_USER\"  VARCHAR2(255 BYTE) DEFAULT '', CONSTRAINT \"SVN_ACCESS_RIGHTS_PK\" PRIMARY KEY (\"ID\")  ENABLE, CONSTRAINT \"SVN_ACCESS_RECURSIVE_CHECK\" CHECK (RECURSIVE = 'yes' OR RECURSIVE = 'no') ENABLE, CONSTRAINT \"SVN_ACCESS_RIGHTS_ACCESS_CHECK\" CHECK (ACCESS_RIGHT = 'none' OR ACCESS_RIGHT = 'read' OR ACCESS_RIGHT  = 'write') ENABLE, CONSTRAINT \"SVN_ACCESS_RIGHTS_SVNGROU_FK1\" FOREIGN KEY (\"GROUP_ID\") REFERENCES $schema.\"SVNGROUPS\" (\"ID\") ON DELETE CASCADE ENABLE, CONSTRAINT \"SVN_ACCESS_RIGHTS_SVNPROJ_FK1\" FOREIGN KEY (\"PROJECT_ID\") REFERENCES $schema.\"SVNPROJECTS\" (\"ID\") ON DELETE CASCADE ENABLE, CONSTRAINT \"SVN_ACCESS_RIGHTS_SVNUSER_FK1\" FOREIGN KEY (\"USER_ID\") REFERENCES $schema.\"SVNUSERS\" (\"ID\") ON DELETE CASCADE ENABLE)";
+    $query = "CREATE TABLE $schema.\"SVN_ACCESS_RIGHTS\" (\"ID\"         NUMBER(*,0) NOT NULL ENABLE, \"PROJECT_ID\" NUMBER(*,0) DEFAULT '0', \"USER_ID\"    NUMBER(*,0) DEFAULT '0', \"GROUP_ID\"   NUMBER(*,0), \"PATH\" VARCHAR2(4000) NOT NULL ENABLE, \"VALID_FROM\"    VARCHAR2(14 BYTE) DEFAULT '00000000000000' NOT NULL ENABLE, \"VALID_UNTIL\"   VARCHAR2(14 BYTE) DEFAULT '99999999999999' NOT NULL ENABLE, \"ACCESS_RIGHT\"  VARCHAR2(255 BYTE) DEFAULT 'none' NOT NULL ENABLE, \"RECURSIVE\"     VARCHAR2(255 BYTE) DEFAULT 'yes' NOT NULL ENABLE, \"CREATED\"       VARCHAR2(14 BYTE) DEFAULT '00000000000000' NOT NULL ENABLE, \"CREATED_USER\"  VARCHAR2(255 BYTE) DEFAULT '', \"MODIFIED\"      VARCHAR2(14 BYTE) DEFAULT '00000000000000' NOT NULL ENABLE, \"MODIFIED_USER\" VARCHAR2(255 BYTE) DEFAULT '', \"DELETED\"       VARCHAR2(14 BYTE) DEFAULT '00000000000000' NOT NULL ENABLE, \"DELETED_USER\"  VARCHAR2(255 BYTE) DEFAULT '', CONSTRAINT \"SVN_ACCESS_RIGHTS_PK\" PRIMARY KEY (\"ID\")  ENABLE, CONSTRAINT \"SVN_ACCESS_RECURSIVE_CHECK\" CHECK (RECURSIVE = 'yes' OR RECURSIVE = 'no') ENABLE, CONSTRAINT \"SVN_ACCESS_RIGHTS_ACCESS_CHECK\" CHECK (ACCESS_RIGHT = 'none' OR ACCESS_RIGHT = 'read' OR ACCESS_RIGHT  = 'write') ENABLE, CONSTRAINT \"SVN_ACCESS_RIGHTS_SVNGROU_FK1\" FOREIGN KEY (\"GROUP_ID\") REFERENCES $schema.\"SVNGROUPS\" (\"ID\") ON DELETE CASCADE ENABLE, CONSTRAINT \"SVN_ACCESS_RIGHTS_SVNPROJ_FK1\" FOREIGN KEY (\"PROJECT_ID\") REFERENCES $schema.\"SVNPROJECTS\" (\"ID\") ON DELETE CASCADE ENABLE, CONSTRAINT \"SVN_ACCESS_RIGHTS_SVNUSER_FK1\" FOREIGN KEY (\"USER_ID\") REFERENCES $schema.\"SVNUSERS\" (\"ID\") ON DELETE CASCADE ENABLE)";
     $result = db_query_install($query, $dbh);
     
     $query = "COMMENT ON TABLE $schema.\"SVN_ACCESS_RIGHTS\" IS 'Table of user or group access rights'";
@@ -1253,7 +1257,7 @@ function createMySQLDatabaseTables($dbh, $charset, $collation) {
     $query = "CREATE TABLE IF NOT EXISTS `sessions` (`session_id` varchar(255) NOT NULL, `session_expires` int(10) unsigned NOT NULL default '0', `session_data` text, PRIMARY KEY  (`session_id`), KEY `idx_expires` (`session_expires`) ) ENGINE=InnoDB DEFAULT CHARSET=$charset COLLATE=$collation;";
     $result = db_query_install($query, $dbh);
     
-    $query = "CREATE TABLE IF NOT EXISTS `svn_access_rights` (`id` int(10) unsigned NOT NULL auto_increment, `project_id` int(10) NOT NULL, `user_id` int(10) NOT NULL, `group_id` int(10) NOT NULL, `path` longtext NOT NULL, `valid_from` varchar(14) NOT NULL COMMENT 'JHJJMMTT', `valid_until` varchar(14) NOT NULL COMMENT 'JHJJMMTT', `access_right` enum('none','read','write') NOT NULL default 'none', `recursive` enum('yes','no') NOT NULL default 'yes', `created` varchar(14) NOT NULL DEFAULT '00000000000000', `created_user` varchar(255) NOT NULL DEFAULT ' ', `modified` varchar(14) NOT NULL DEFAULT '00000000000000', `modified_user` varchar(255) NOT NULL DEFAULT ' ', `deleted` varchar(14) NOT NULL DEFAULT '00000000000000', `deleted_user` varchar(255) NOT NULL DEFAULT ' ', PRIMARY KEY  (`id`), KEY `idx_projectid` (`project_id`), KEY `idx_userid` (`user_id`), KEY `idx_groupid` (`group_id`), KEY `idx_path` (`path`(512)), KEY `idx_deleted` (`deleted`) ) ENGINE=InnoDB DEFAULT CHARSET=$charset COLLATE=$collation COMMENT='Table of user or group access rights';";
+    $query = "CREATE TABLE IF NOT EXISTS `svn_access_rights` (`id` int(10) unsigned NOT NULL auto_increment, `project_id` int(10) NOT NULL, `user_id` int(10) NOT NULL DEFAULT '0', `group_id` int(10) NOT NULL DEFAULT '0', `path` longtext NOT NULL, `valid_from` varchar(14) NOT NULL COMMENT 'JHJJMMTT', `valid_until` varchar(14) NOT NULL COMMENT 'JHJJMMTT', `access_right` enum('none','read','write') NOT NULL default 'none', `recursive` enum('yes','no') NOT NULL default 'yes', `created` varchar(14) NOT NULL DEFAULT '00000000000000', `created_user` varchar(255) NOT NULL DEFAULT ' ', `modified` varchar(14) NOT NULL DEFAULT '00000000000000', `modified_user` varchar(255) NOT NULL DEFAULT ' ', `deleted` varchar(14) NOT NULL DEFAULT '00000000000000', `deleted_user` varchar(255) NOT NULL DEFAULT ' ', PRIMARY KEY  (`id`), KEY `idx_projectid` (`project_id`), KEY `idx_userid` (`user_id`), KEY `idx_groupid` (`group_id`), KEY `idx_path` (`path`(512)), KEY `idx_deleted` (`deleted`) ) ENGINE=InnoDB DEFAULT CHARSET=$charset COLLATE=$collation COMMENT='Table of user or group access rights';";
     $result = db_query_install($query, $dbh);
     
     $query = "CREATE TABLE IF NOT EXISTS `svn_projects_mailinglists` ( `id` int(10) unsigned NOT NULL auto_increment, `project_id` int(10) unsigned NOT NULL, `mailinglisten_id` int(10) unsigned NOT NULL, `created` varchar(14) NOT NULL DEFAULT '00000000000000', `created_user` varchar(255) NOT NULL DEFAULT ' ', `modified` varchar(14) NOT NULL DEFAULT '00000000000000', `modified_user` varchar(255) NOT NULL DEFAULT ' ', `deleted` varchar(14) NOT NULL DEFAULT '00000000000000', `deleted_user` varchar(255) NOT NULL DEFAULT ' ', PRIMARY KEY  (`id`), KEY `moduleid` (`project_id`,`mailinglisten_id`), KEY `mailinglistenid` (`mailinglisten_id`) ) ENGINE=InnoDB DEFAULT CHARSET=$charset COLLATE=$collation COMMENT='Table of modules and mailinglist relations';";
