@@ -9,6 +9,7 @@ Release 0.5.7.0
     - added mysqli driver to installer
     - basic tests with php 7
     - added docker container build for testing purposes
+    - fixed bug #56, missing default values and projects now need a description
 
 Release 0.5.6.6
     - updated selinux policy for CentOS 6 and CentOS 7
